<resources>
    <string name="app_name">Across The Universe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_wiki">Search Wiki</string>
    <string name="wiki_helper_text">Wikipedia</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="favourite">Favourites</string>
    <string name="settings">Settings</string>
    <string name="day_before_yesterday">2 days ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="saved_theme">saved_theme</string>
    <string name="saved_color">saved_color</string>
    <string name="pod">Picture</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="weather">Weather</string>
    <string name="rover_name">Rover name: %1$s</string>
    <string name="rover_landing_date">Landing date: %1$s</string>
    <string name="rover_launch_date">Launch date: %1$s</string>
    <string name="rover_status">Status: %1$s</string>
    <string name="camera_name">Camera name: %1$s</string>
    <string name="cardView_sample_text">Note text</string>
    <string name="Notes">Notes</string>
    <string name="note_title_hint">Note title</string>
    <string name="note_hint">Note text</string>
</resources>