<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/navigation"
    app:startDestination="@id/pictureOfDayFragment">

    <fragment
        android:id="@+id/earthFragment"
        android:name="com.eliseylobanov.acrosstheuniverse.ui.earth.EarthFragment"
        android:label="Earth" />
    <fragment
        android:id="@+id/marsFragment"
        android:name="com.eliseylobanov.acrosstheuniverse.ui.mars.MarsFragment"
        android:label="Mars" />
    <fragment
        android:id="@+id/pictureOfDayFragment"
        android:name="com.eliseylobanov.acrosstheuniverse.ui.pictureofday.PictureOfDayFragment"
        android:label="Pictures" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.eliseylobanov.acrosstheuniverse.ui.settings.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.eliseylobanov.acrosstheuniverse.ui.weather.WeatherFragment"
        android:label="@string/weather" />
    <fragment
        android:id="@+id/notesFragment"
        android:name="com.eliseylobanov.acrosstheuniverse.ui.notes.NotesFragment"
        android:label="@string/Notes">
        <action
            android:id="@+id/action_notesFragment_to_noteDetailsFragment"
            app:destination="@id/noteDetailsFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/noteDetailsFragment"
        android:name="com.eliseylobanov.acrosstheuniverse.ui.notes.NoteDetailsFragment"
        android:label="Edit Note">
        <argument
            android:name="note"
            app:argType="com.eliseylobanov.acrosstheuniverse.entities.Note"
            app:nullable="true" />
    </fragment>
</navigation>